--- a/views/productinventory/productinventoryscripts.ejs
+++ b/views/productinventory/productinventoryscripts.ejs
@@ -7,7 +7,23 @@
         $('#categoryid').val("All");
 
         $('#selectedbranch').text("Filter by Branch");
-        $('#branchid').val("All");
+        $('#branchfilter').val("All");
+
+        $('#categoryid, #branchfilter').on('change', function () {
+            var selectedCategoryId = $('#categoryid').val();
+            var selectedBranchId = $('#branchfilter').val();
+            $('#productinventory-datatable tbody tr').each(function () {
+                var categoryCell = $(this).find('td:nth-child(3)').text().trim();
+                var branchCell = $(this).find('td:nth-child(4)').text().trim();
+                var categoryMatch = (selectedCategoryId === 'Filter by Category' || categoryCell === selectedCategoryId || selectedCategoryId === 'All');
+                var branchMatch = (selectedBranchId === 'Filter by Branch' || branchCell === selectedBranchId || selectedBranchId === 'All');
+                if (categoryMatch && branchMatch) {
+                    $(this).show();
+                } else {
+                    $(this).hide();
+                }
+            });
+        });
 
         let dropdownCounter = 0;
         let branches = [];
@@ -120,7 +136,7 @@
             let category = $('#categoryid').val();
             let branchid;
             if ('<%= accesstype%>' === 'Owner') {
-                branchid = $('#branchid').val();
+                branchid = $('#branchfilter').val();
             } else {
                 branchid = '<%= branchid%>';
             }
@@ -215,9 +231,9 @@
                 dropdownElement.hide();
 
                 inputElement.trigger("change").prop("disabled", true);
-                if("<%= accesstype%>" == "Owner"){
+                if ("<%= accesstype%>" == "Owner") {
                     row.find('input[name="branch"]').prop("disabled", false);
-                }else{
+                } else {
                     row.find('.branch-id').text("<%= branchid%>");
                     $.ajax({
                         type: "POST",
@@ -228,8 +244,8 @@
                         success: function (result) {
                             let data = result.data;
                             // console.log(data, "returned data")
-                            row.find('input[name="branch"]').val(data[0].branchname +" (" + data[0].branchid + ")");
-                            
+                            row.find('input[name="branch"]').val(data[0].branchname + " (" + data[0].branchid + ")");
+
                         },
                         error: function (err) {
                             errormsg(err);
@@ -258,7 +274,7 @@
                     },
                 });
 
-                if("<%= accesstype%>" != "Owner"){
+                if ("<%= accesstype%>" != "Owner") {
                     AddTableRow(counter);
                     counter++;
                 }
@@ -402,6 +418,67 @@
             error: function (err) {
                 warning("Warning", err);
             },
+        });
+
+        $.ajax({
+            type: 'GET',
+            url: '/category/load',
+            success: function (result) {
+                var data = result.data;
+                // console.log(data)
+                var allCategoryItem = $('<li></li>')
+                    .text("All Category")
+                    .data('categoryid', 'All');
+                $('.categorylist').append(allCategoryItem);
+                $.each(data, function (key, item) {
+                    if (item.status == "ACTIVE" && item.categoryname !== "Material") {
+
+                        var listItem = $('<li></li>')
+                            .text(item.categoryname)
+                            .data('categoryid', item.categoryname);
+                        $('.categorylist').append(listItem);
+                    }
+                });
+                $('.categorylist').on('click', 'li', function () {
+                    var selectedOption = $(this).text();
+                    var selectedcategoryId = $(this).data('categoryid');
+                    $('#selectedcategory').text(selectedOption);
+                    $('#categoryid').val(selectedcategoryId).change();
+                });
+            },
+            error: function (err) {
+                errormsg(err);
+            }
+        });
+        $.ajax({
+            type: 'GET',
+            url: '/branch/load',
+            success: function (result) {
+                var data = result.data;
+                console.log("branch: ", data)
+                var allBranchItem = $('<li></li>')
+                    .text("All Branch")
+                    .data('branchid', 'All');
+                $('.branchlist').append(allBranchItem);
+                $.each(data, function (key, item) {
+                    if (item.status == "ACTIVE" && item.categoryname !== "Material") {
+
+                        var listItem = $('<li></li>')
+                            .text(item.branchname + " (" + item.branchid + ")")
+                            .data('branchid', item.branchid);
+                        $('.branchlist').append(listItem);
+                    }
+                });
+                $('.branchlist').on('click', 'li', function () {
+                    var selectedOption = $(this).text();
+                    var selectedbranchId = $(this).data('branchid');
+                    $('#selectedbranch').text(selectedOption);
+                    $('#branchfilter').val(selectedbranchId).change();
+                });
+            },
+            error: function (err) {
+                errormsg(err);
+            }
         });
         //#endregion
 
