--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -111,7 +111,7 @@
                                         <span id="selectedbranch">Filter by Branch</span>
                                         <i class="fa fa-chevron-left"></i>
                                     </div>
-                                    <input type="hidden" name="branchid" id="branchid">
+                                    <input type="hidden" name="branchfilter" id="branchfilter">
                                     <ul class="customdropdown-menu branchlist">
                                     </ul>
                                 </div>
@@ -123,7 +123,7 @@
                                         <span id="selectedbranch">Filter by Branch</span>
                                         <i class="fa fa-chevron-left"></i>
                                     </div>
-                                    <input type="hidden" name="branchid" id="branchid">
+                                    <input type="hidden" name="branchfilter" id="branchfilter">
                                     <ul class="customdropdown-menu branchlist">
                                     </ul>
                                 </div>
