[updated production transfer]-[fix the bug on onchange event of productid]

--- a/views/productionmaterials/productionmaterialsscripts.ejs
+++ b/views/productionmaterials/productionmaterialsscripts.ejs
@@ -72,7 +72,7 @@
         $(document).on('click', '#addBtn', function () {
             let productname = $('#productname').val();
             let description = $('#description').val();
-            let category = $('#categoryID').val();
+            let category = $('#category').val();
             let vendorid = $('#vendorID').val();
             let price = $('#price').val();
             let units = $('#units').val();
