--- a/views/servicepackage/servicepackage.ejs
+++ b/views/servicepackage/servicepackage.ejs
@@ -123,7 +123,7 @@
                                                                         id="product" />
                                                                     <input autocomplete="off" type="hidden" id="productID" name="productID" />
                                                                 </div>
-                                                                <div class="custom-dropdown" id="productDropdown"></div>
+                                                                <div class="custom-dropdown cdw-tableoption" id="productDropdown"></div>
                                                             </div>
                                                         </td>
                                                         <td data-label="Product ID" class="custom-mobile-align product-id productid"></td>
