--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -136,9 +136,9 @@
               <span>Sales Details</span>
             </a>
             <!-- <a class="collapse-item" href="/salesitems">
-                    <i class="fas fa-cart-arrow-down"></i>
-                    <span>Sales Items</span>
-                </a> -->
+              <i class="fas fa-cart-arrow-down"></i>
+              <span>Sales Items</span>
+            </a> -->
             <a class="collapse-item" href="/shiftreports">
               <span>Shifts Reports</span>
             </a>
@@ -148,9 +148,9 @@
             <a class="collapse-item" href="/productprice">
               <span>Product Price</span>
             </a>
-            <a class="collapse-item" href="/pricechange">
+            <!-- <a class="collapse-item" href="/pricechange">
               <span>Price Change</span>
-            </a>
+            </a> -->
           </div>
         </div>
       </li>
