--- a/views/systemlogs/systemlogsscripts.ejs
+++ b/views/systemlogs/systemlogsscripts.ejs
@@ -27,7 +27,7 @@
 
                     const tr = $('<tr>').append(
                         $('<td>', { text: item.logid, 'data-label': 'Log ID', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.logdate, 'data-label': 'Log Date', class: 'custom-mobile-align' }),
+                        $('<td>', { text: item.logdate, 'data-label': 'Log Date', class: 'custom-mobile-align no-wrap' }),
                         $('<td>', { text: item.loglevel, 'data-label': 'Log Level', class: 'custom-mobile-align' }),
                         $('<td>', { text: item.source, 'data-label': 'Source', class: 'custom-mobile-align' }),
                         $('<td>', { text: item.message, 'data-label': 'Message', class: 'custom-mobile-align' }),
